# gsi027-complemento

./: .gitignore  3_resolucao_de_equacoes.ipynb  impares.ipynb  main.py  pyproject.toml  requirements.txt
biblioteca/: res_eqs.py
